--- a/src/app/admin/pages/gestionarHorariosMedicos/gestionar-horarios-medicos/gestionar-horarios-medicos.component.html
+++ b/src/app/admin/pages/gestionarHorariosMedicos/gestionar-horarios-medicos/gestionar-horarios-medicos.component.html
@@ -2,14 +2,14 @@
   <div class="col-12">
       <div class="card">
           <div class="card-body">
-
             <div class="alert alert-warning" role="alert">
-              Si ya tienes horarios con medicos registrados puedes crear una cita medica
-              <a href="/agregar-cita" class="btn btn-info"> Aqui</a>
+              Si ya tienes horarios con médicos registrados puedes crear una cita médica
+              <button class="btn btn-info" (click)="redirigirACrearCita()"> Aquí</button>
             </div>
+            
 
               <!-- Mensaje destacado encima de la barra de búsqueda -->
-              <p style="font-weight: bold; color: #ff5733;">Buscar horarios medicos por dia de trabajo ejemplo: lunes, martes, miercoles.....</p>
+              <p style="font-weight: bold; color: #3336ff;">Buscar horarios medicos por dia de trabajo ejemplo: lunes, martes, miercoles.....</p>
 
               <input type="text"
                      class="form-control"
