--- a/src/app/admin/pages/gestionarTiposCitas/gestionar-tipos-citas/gestionar-tipos-citas.component.html
+++ b/src/app/admin/pages/gestionarTiposCitas/gestionar-tipos-citas/gestionar-tipos-citas.component.html
@@ -3,10 +3,10 @@
     <div class="col-12">
         <div class="card">
             <div class="card-body">
-              <p style="font-weight: bold; color: #3336ff;">Busca tipo cita por especialidad...</p>
+              <p style="font-weight: bold; color: #3336ff;">Buscar especialidades...</p>
                 <input type="text"
                         class="form-control"
-                        placeholder="Buscar tipo cita..."
+                        placeholder="Buscar especialidades medicas..."
                         #txtTermino
                         (keyup)="buscar( txtTermino.value )"/>
 
