--- a/src/app/admin/pages/gestionarCitasMedicas/gestionar-citas/gestionar-citas-medicas.component.html
+++ b/src/app/admin/pages/gestionarCitasMedicas/gestionar-citas/gestionar-citas-medicas.component.html
@@ -5,7 +5,7 @@
     <div class="col-12">
         <div class="card">
             <div class="card-body">
-                <p style="font-weight: bold; color: #3336ff;">Busca citas medicas por nombre del usuarios o nombre del medico...</p>
+                <p style="font-weight: bold; color: #3336ff;">Busca citas medicas por nombre del paciente o nombre del medico...</p>
                 <input type="text"
                         class="form-control"
                         placeholder="Buscar Citas medica..."
