--- a/src/app/medicos/historial/historial.component.html
+++ b/src/app/medicos/historial/historial.component.html
@@ -2,24 +2,34 @@
   <div class="text-center mb-4">
     <h2>Redactar Historial Médico</h2>
 </div>
-    <div class="mb-3">
-        <label for="paciente" class="form-label">Paciente:</label>
-        <select class="form-control" id="paciente" formControlName="rut_paciente">
-          <option *ngFor="let paciente of pacientes" [value]="paciente.rut">{{ paciente.nombre }} {{ paciente.apellidos }} </option>
-        </select>
-      </div>
+<div class="mb-3">
+  <label for="paciente" class="form-label">Paciente:</label>
+  <select class="form-control" id="paciente" formControlName="rut_paciente">
+    <option value="" disabled selected>Seleccionar paciente</option>
+    <option *ngFor="let paciente of pacientes" [value]="paciente.rut">{{ paciente.nombre }} {{ paciente.apellidos }}</option>
+  </select>
+  <div *ngIf="formularioIntentadoEnviar && historialMedicoForm.get('rut_paciente')!.hasError('required')" class="text-danger">
+    Se debe seleccionar un paciente.
+  </div>
+  
+</div>
+
       <div class="mb-3">
         <label for="medico" class="form-label">Médico:</label>
         <select class="form-control" id="medico" formControlName="rut_medico">
-          <option [value]="AuthService.medico.rut">{{ AuthService.medico.nombre }}</option>
+          <option [value]="AuthService.medico.rut">{{ AuthService.medico.nombre }} {{ AuthService.medico.apellidos }}</option>
         </select>
         
         
       </div>
-    <div class="mb-3">
-      <label for="diagnostico" class="form-label">Diagnóstico:</label>
-      <input type="text" class="form-control" id="diagnostico" formControlName="diagnostico">
-    </div>
+      <div class="mb-3">
+        <label for="diagnostico" class="form-label">Diagnóstico:</label>
+        <input type="text" class="form-control" id="diagnostico" formControlName="diagnostico">
+        <div *ngIf="formularioIntentadoEnviar && historialMedicoForm.get('diagnostico')!.hasError('required')" class="text-danger">
+          El diagnóstico es requerido.
+        </div>
+      </div>
+      
   
     <div class="mb-3">
       <label for="medicamento" class="form-label">Medicamento:</label>
@@ -34,10 +44,16 @@
     <div class="mb-3">
       <label for="fecha_consulta" class="form-label">Fecha de Consulta:</label>
       <input type="date" class="form-control" id="fecha_consulta" formControlName="fecha_consulta">
+      <div *ngIf="formularioIntentadoEnviar && historialMedicoForm.get('fecha_consulta')!.hasError('required')" class="text-danger">
+        La fecha de consulta es requerida.
+      </div>
     </div>
+    
+    
   
   
     <button type="submit" class="btn btn-primary">Guardar</button>
+
   
   </form>
   
