--- a/src/app/pacientes/pages/formulario-cita/formulario-cita.component.html
+++ b/src/app/pacientes/pages/formulario-cita/formulario-cita.component.html
@@ -1,4 +1,4 @@
-<button class="btn btn-secondary mt-3 btn-margen-izquierdo" (click)="volverAtras()">Volver Atrás</button>
+<button class="btn btn-secondary mt-3 btn-margen-izquierdo" (click)="volverAtras()">Atrás</button>
 
 <div class="container mt-5">
   <h2 class="text-center mb-4">Formulario Cita</h2>
@@ -42,7 +42,7 @@
 
   <div class="col-12">
     <div class="row justify-content-center">
-      <div class="col-md-3 mb-4" *ngFor="let dia of ordenDias.slice(5)">
+      <div class="col-md-3 mb-4" *ngFor="let dia of ordenDias.slice(4)">
         <div class="dia-container">
           <h3>{{ dia | titlecase }}</h3>
           <ul>
