--- a/src/app/admin/pages/gestionarCitasMedicas/gestionar-citas/gestionar-citas-medicas.component.html
+++ b/src/app/admin/pages/gestionarCitasMedicas/gestionar-citas/gestionar-citas-medicas.component.html
@@ -68,6 +68,7 @@
                                     <option value="no_asistio">No Asistió</option>
                                     <option value="pagado">Pagado</option>
                                     <option value="no_pagado">no Pagado</option>
+                                    <option value="cancelada">cancelada</option>
                                  
                                 </select>
                                 
