--- a/src/app/admin/pages/gestionarHorariosMedicos/gestionar-horarios-medicos/gestionar-horarios-medicos.component.html
+++ b/src/app/admin/pages/gestionarHorariosMedicos/gestionar-horarios-medicos/gestionar-horarios-medicos.component.html
@@ -84,8 +84,7 @@
                           
                           
                    
-              
-                          <!-- Aquí puedes agregar botones de acciones para cada médico -->
+  
               <!--BOTON PARA BORRAR MEDICO-->
               <td>
                 <div class="icon-container">
@@ -96,14 +95,14 @@
                     <i class="fa fa-close text-danger"></i> 
                   </a>
                 </div>
-                <div class="icon-container">
+              <!--  <div class="icon-container">
                   <a class="cursor"
                     data-toggle="tooltip" 
                     data-original-title="Editar"
                     (click)="editarHorario( horario )"> 
                     <i class="fa fa-pencil text-primary"></i> 
                   </a>
-                </div>
+                </div> -->
                 </td>
                 
                 
