--- a/src/app/admin/pages/gestionarTiposCitas/agregar-tipo-cita/agregar-tipo-cita.component.html
+++ b/src/app/admin/pages/gestionarTiposCitas/agregar-tipo-cita/agregar-tipo-cita.component.html
@@ -30,7 +30,7 @@
   
 
   <div class="form-group mb-3">
-    <label for="duracion_cita">Duración de la Cita (solo minutos)</label>
+    <label for="duracion_cita">Duración de la Cita (solo minutos, duracion maxima 180 minutos)</label>
     <input type="text" id="duracion_cita" formControlName="duracion_cita" class="form-control">
     
     <!-- Mensajes de error para Duración de la Cita -->
