--- a/src/app/admin/pages/gestionarTiposCitas/editar-tipo-cita/editar-tipo-cita.component.html
+++ b/src/app/admin/pages/gestionarTiposCitas/editar-tipo-cita/editar-tipo-cita.component.html
@@ -1,42 +1,35 @@
 <form [formGroup]="formularioTipoCita" (ngSubmit)="editarTipoCita()">
   <div class="form-group mb-3">
-    <label>Tipo de Cita</label>
-    <div class="form-check">
-      <input class="form-check-input" type="radio" id="consultaGeneral" formControlName="tipo_cita" value="Consulta General">
-      <label class="form-check-label" for="consultaGeneral">Consulta General</label>
-    </div>
-    <div class="form-check">
-      <input class="form-check-input" type="radio" id="especialidad" formControlName="tipo_cita" value="Consulta Especialidad">
-      <label class="form-check-label" for="especialidad">Consulta Especialidad</label>
-    </div>
+   
     
   </div>
 
-  <div class="form-group mb-3" *ngIf="formularioTipoCita.get('tipo_cita')?.value === 'Consulta Especialidad'">
-    <label for="especialidad_medica">Especialidad Médica</label>
-    <input type="text" id="especialidad_medica" formControlName="especialidad_medica" class="form-control">
-  </div>
+  
   
   <div class="form-group mb-3">
     <label for="precio">Precio</label>
     <input type="text" id="precio" formControlName="precio" class="form-control">
+    
     <!-- Mensajes de error para Precio -->
     <div *ngIf="formularioTipoCita.controls['precio'].touched">
       <div *ngIf="formularioTipoCita.controls['precio'].errors?.['required']" class="alert alert-danger">
         El precio es requerido.
       </div>
       <div *ngIf="formularioTipoCita.controls['precio'].errors?.['pattern']" class="alert alert-danger">
-        Solo se permiten números en el precio.
+        Solo se permiten números enteros sin ceros a la izquierda.
       </div>
     </div>
   </div>
+  
+  
 
   
   
 
   <div class="form-group mb-3">
-    <label for="duracion_cita">Duración de la Cita (solo minutos)</label>
+    <label for="duracion_cita">Duración de la Cita (solo minutos, duracion maxima 180 minutos)</label>
     <input type="text" id="duracion_cita" formControlName="duracion_cita" class="form-control">
+    
     <!-- Mensajes de error para Duración de la Cita -->
     <div *ngIf="formularioTipoCita.controls['duracion_cita'].touched">
       <div *ngIf="formularioTipoCita.controls['duracion_cita'].errors?.['required']" class="alert alert-danger">
@@ -45,8 +38,19 @@
       <div *ngIf="formularioTipoCita.controls['duracion_cita'].errors?.['pattern']" class="alert alert-danger">
         Solo se permiten números enteros para representar minutos.
       </div>
+      <div *ngIf="formularioTipoCita.controls['duracion_cita'].errors?.['max']" class="alert alert-danger">
+        La duración de la cita no puede exceder los 180 minutos (3 hrs).
+      </div>
     </div>
+  
+    <!-- Mostrar la conversión de minutos a horas y minutos -->
+<!-- Mostrar la conversión de minutos a horas y minutos -->
+<div *ngIf="formularioTipoCita.controls['duracion_cita']?.valid && formularioTipoCita.get('duracion_cita')?.value">
+  {{ convertirMinutosAHoras(formularioTipoCita.get('duracion_cita')?.value) }}
+</div>
+
   </div>
+  
   
   
 
