--- a/src/app/pacientes/pages/historial-paciente/historial-paciente.component.html
+++ b/src/app/pacientes/pages/historial-paciente/historial-paciente.component.html
@@ -8,7 +8,7 @@
         <div class="card">
             <div class="card-body">
                 <h4 class="card-title">Total de historiales: </h4>
-                <h6 class="card-subtitle">Usuarios registrados en mi aplicacion</h6>
+                <h6 class="card-subtitle">Historiales registrados en mi aplicacion</h6>
                 <div class="table-responsive">
                     <table class="table table-bordered">
                       <thead>
@@ -20,6 +20,7 @@
                           <th>notas</th>
                           <th>Medico</th>
                           <th>Fecha de consulta</th>
+                          <th>Acciones</th>
                           
                          <!-- <th>Rut paciente</th> -->
                       
@@ -32,7 +33,19 @@
                           <td>{{historial.medicamento}}</td>
                           <td>{{historial.notas}}</td>
                           <td>{{historial.medico.nombre}} {{historial.medico.apellidos}}</td>
-                          <td>{{historial.fecha_consulta}}</td>
+                          <td>{{ historial.fecha_consulta | date: 'MMM d, y' }}</td>
+
+                          <td>
+                            <div class="icon-container d-flex">
+                              <!-- Icono para ver historial -->
+                              <a class="cursor"
+                                 data-toggle="tooltip"
+                                 data-original-title="Ver Historial"
+                                 [routerLink]="['/ver-historial-paciente', historial.id_historial]">
+                                <i class="fa fa-eye text-info"></i>
+                              </a>
+                            </div>
+                          </td>
                           
                        <!--   <td>{{historial.rut_paciente}}</td> -->
                    
