--- a/src/app/shared/dashboard/dashboard.component.html
+++ b/src/app/shared/dashboard/dashboard.component.html
@@ -27,7 +27,7 @@
       </button>
  
       <span class="spacer"></span>
-      <button mat-button (click)="onLogout()">Logout</button>
+      <button mat-button (click)="onLogout()">Salir</button>
       <span class="user-info" *ngIf="authService.usuario">
        
     </span>
