--- a/src/app/admin/pages/inicio/inicio.component.html
+++ b/src/app/admin/pages/inicio/inicio.component.html
@@ -1,6 +1,6 @@
 
 <div class="container">
-    <h1 class="title">Bienvenid@ al Sistema de Gestión de Citas Médicas</h1>
+    <h1 class="title">Bienvenido al Sistema de Gestión de Citas Médicas</h1>
     <p class="introduction">
         A continuación, encontrará instrucciones detalladas para facilitar la gestión de su clínica. Por favor, siga estos pasos en el orden presentado para una experiencia eficiente.
     </p>
