--- a/src/app/admin/pages/gestionarCitasMedicas/gestionar-citas/gestionar-citas-medicas.component.html
+++ b/src/app/admin/pages/gestionarCitasMedicas/gestionar-citas/gestionar-citas-medicas.component.html
@@ -89,9 +89,12 @@
                     </table>
                 </div>
                 <div *ngIf="txtTermino.value.length === 0"> <!--SI EL TERMINO ES IGUAL A 0 LOS BOTONES SIGUIENTE Y ANTERIOR SE VAN A MOSTRAR CASO CONTRARIO VAN A DESAPARECER-->
-                    <button (click)="cambiarPagina(-5)" class="btn btn-secondary">Anteriores</button>
-                    &nbsp; <!--Esto es para que exista una pequeña separacion entre ambos-->
-                    <button (click)="cambiarPagina(5)" class="btn btn-secondary">Siguiente</button>
+                    <app-paginator 
+                    [totalItems]="totalCitas" 
+                    [(offset)]="desde" 
+                    [pageSize]="5"
+                    (offsetChange)="cambiarPagina($event)">
+                  </app-paginator>
                 </div>
             </div>
         </div>
