--- a/src/app/pacientes/pages/historial-paciente/historial-paciente.component.html
+++ b/src/app/pacientes/pages/historial-paciente/historial-paciente.component.html
@@ -57,12 +57,13 @@
                       </tbody>
                     </table>
                   </div>
-                <!--ESTA CONDICION SE HACE PARA QUE CUANDO SE TECLEA EN LA BARRA DE BUSQUEDA Y SE CARGAN LOS RESULTADOS DE BUSQUEDA DESAPARESCAN LOS BOTONES SIGUIENTES Y ANTERIOR EN LA PANTALLA-->
-                <div> <!--SI EL TERMINO ES IGUAL A 0 LOS BOTONES SIGUIENTE Y ANTERIOR SE VAN A MOSTRAR CASO CONTRARIO VAN A DESAPARECER-->
-                  <button (click)="cambiarPagina(-5)" class="btn btn-secondary">Anteriores</button>
-                  &nbsp; <!--Esto es para que exista una pequeña separacion entre ambos-->
-                  <button (click)="cambiarPagina(5)" class="btn btn-secondary">Siguiente</button>
-              </div>
+             
+                <app-paginator 
+                [totalItems]="totalHistoriales" 
+                [(offset)]="desde" 
+                [pageSize]="5"
+                (offsetChange)="cambiarPagina($event)">
+              </app-paginator>
             
             </div>
         </div>
