--- a/src/app/pacientes/pages/inicio-paciente/inicio-paciente.component.html
+++ b/src/app/pacientes/pages/inicio-paciente/inicio-paciente.component.html
@@ -1,6 +1,6 @@
-<!-- Suponiendo que este es tu componente: instrucciones.component.html -->
+
 <div class="container">
-    <h1 class="title">Bienvenid@ al Sistema de Gestión de Citas Médicas</h1>
+    <h1 class="title">Bienvenido al Sistema de Gestión de Citas Médicas</h1>
     <p class="introduction">
         A continuación, encontrará instrucciones facitar el uso de nuestra aplicacion de citas. Por favor, siga estos pasos en el orden presentado para una experiencia eficiente.
     </p>
