--- a/src/app/pacientes/pages/ver-citas-paciente/ver-citas-paciente.component.html
+++ b/src/app/pacientes/pages/ver-citas-paciente/ver-citas-paciente.component.html
@@ -54,11 +54,14 @@
                     </table>
                   </div>
                 <!--ESTA CONDICION SE HACE PARA QUE CUANDO SE TECLEA EN LA BARRA DE BUSQUEDA Y SE CARGAN LOS RESULTADOS DE BUSQUEDA DESAPARESCAN LOS BOTONES SIGUIENTES Y ANTERIOR EN LA PANTALLA-->
-                <div > <!--SI EL TERMINO ES IGUAL A 0 LOS BOTONES SIGUIENTE Y ANTERIOR SE VAN A MOSTRAR CASO CONTRARIO VAN A DESAPARECER-->
-                  <button (click)="cambiarPagina(-5)" class="btn btn-secondary">Anteriores</button>
-                  &nbsp; <!--Esto es para que exista una pequeña separacion entre ambos-->
-                  <button (click)="cambiarPagina(5)" class="btn btn-secondary">Siguiente</button>
-              </div>
+                <app-paginator 
+                [totalItems]="totalCitas" 
+                [(offset)]="desde" 
+                [pageSize]="5"
+                (offsetChange)="cargarCitasMedicas(authService.usuario!.rut, $event)">
+              </app-paginator>
+              
+              
             
             </div>
         </div>
