--- a/src/app/admin/pages/gestionar-medicos/gestiona-medicos/gestionar-medicos.component.html
+++ b/src/app/admin/pages/gestionar-medicos/gestiona-medicos/gestionar-medicos.component.html
@@ -41,11 +41,9 @@
                     <!--BOTON DE CREAR MEDICO-->
                     <div class="col">
                         <div class="text-right">
-                            <a class="btn btn-primary"
-                               routerLink="/agregar-medico">
-                                <i class="fa fa-hospital-o"></i> 
-                                Crear médico
-                            </a>
+                          <a class="btn btn-primary" routerLink="/agregar-medico">
+                            <i class="fa fa-hospital-o"></i> Crear médico
+                          </a>
                         </div>
                     </div>
 
@@ -55,20 +53,16 @@
                   <table class="table table-bordered">
                     <thead>
                       <tr>
-                    
-                        <th>ID</th>
-                        <th>Nombre</th>
-                        <th>Apellidos</th>
-                        <th>Teléfono</th>
-                        <th>Email</th>
-                        <th>Dirección</th>
-                        
-                    
-                        <th>Especialidad</th>
-                        <th>Acciones</th>
-                    
+                        <th style="width: 10%;">ID</th>
+                        <th style="width: 15%;">Nombre</th>
+                        <th style="width: 20%;">Apellidos</th>
+                        <th style="width: 15%;">Teléfono</th>
+                        <th style="width: 20%;">Email</th>
+                        <th style="width: 20%;">Especialidad</th>
+                        <th style="width: 10%;">Acciones</th>
                       </tr>
                     </thead>
+                    
                     <tbody>
                       <tr *ngFor="let medico of medicos">
                        <!-- <td>{{ medico.foto }}</td> -->
@@ -77,7 +71,7 @@
                         <td>{{ medico.apellidos }}</td>
                         <td>{{ medico.telefono }}</td>
                         <td>{{ medico.email }}</td>
-                        <td>{{ medico.direccion }}</td>
+             
                         
                      
                         <td>{{ medico.especialidad_medica }}</td>
