--- a/src/app/admin/pages/gestionarCitasMedicas/gestionar-citas/gestionar-citas-medicas.component.html
+++ b/src/app/admin/pages/gestionarCitasMedicas/gestionar-citas/gestionar-citas-medicas.component.html
@@ -41,17 +41,18 @@
                     <table class="table table-bordered">
                         <thead>
                             <tr>
-                                <th>Id</th>
-                                <th>Fecha</th>
-                                <th>Paciente</th>
-                                <th>Medico</th>
-                                <th>Tipo_cita</th>
-                                <th>Estado</th>
-                                <th>Hora_inicio</th>
-                                <th>Hora_fin</th>
-                                <th>Acciones</th>
+                              <th style="width: 8%;">Id</th>
+                              <th style="width: 12%;">Fecha</th>
+                              <th style="width: 20%;">Paciente</th>
+                              <th style="width: 20%;">Médico</th>
+                              <th style="width: 15%;">Tipo de cita</th>
+                              <th style="width: 10%;">Estado</th>
+                              <th style="width: 10%;">Hora inicio</th>
+                              <th style="width: 10%;">Hora fin</th>
+                              <th style="width: 10%;">Acciones</th>
                             </tr>
-                        </thead>
+                          </thead>
+                          
                         <tbody>
                             <tr *ngFor="let cita of citas">
                                
