--- a/src/app/admin/pages/gestionarTiposCitas/agregar-tipo-cita/agregar-tipo-cita.component.html
+++ b/src/app/admin/pages/gestionarTiposCitas/agregar-tipo-cita/agregar-tipo-cita.component.html
@@ -1,9 +1,4 @@
-<form [formGroup]="formularioTipoCita" (ngSubmit)="crearTipoCita()">
-  <div class="form-group mb-3">
-   
-    
-  </div>
-
+<form [formGroup]="formularioTipoCita" (ngSubmit)="onSubmit()">
   <div class="form-group mb-3">
     <label for="especialidad_medica">Especialidad Médica</label>
     <input type="text" id="especialidad_medica" formControlName="especialidad_medica" class="form-control">
@@ -12,52 +7,36 @@
   <div class="form-group mb-3">
     <label for="precio">Precio</label>
     <input type="text" id="precio" formControlName="precio" class="form-control">
-    
-    <!-- Mensajes de error para Precio -->
     <div *ngIf="formularioTipoCita.controls['precio'].touched">
-      <div *ngIf="formularioTipoCita.controls['precio'].errors?.['required']" class="alert alert-danger">
+      <div *ngIf="formularioTipoCita.controls['precio'].hasError('required')" class="alert alert-danger">
         El precio es requerido.
       </div>
-      <div *ngIf="formularioTipoCita.controls['precio'].errors?.['pattern']" class="alert alert-danger">
+      <div *ngIf="formularioTipoCita.controls['precio'].hasError('pattern')" class="alert alert-danger">
         Solo se permiten números enteros sin ceros a la izquierda.
       </div>
     </div>
   </div>
-  
-  
-
-  
-  
 
   <div class="form-group mb-3">
-    <label for="duracion_cita">Duración de la Cita (solo minutos, duracion maxima 180 minutos)</label>
+    <label for="duracion_cita">Duración de la Cita (solo minutos, duración máxima 180 minutos)</label>
     <input type="text" id="duracion_cita" formControlName="duracion_cita" class="form-control">
-    
-    <!-- Mensajes de error para Duración de la Cita -->
     <div *ngIf="formularioTipoCita.controls['duracion_cita'].touched">
-      <div *ngIf="formularioTipoCita.controls['duracion_cita'].errors?.['required']" class="alert alert-danger">
+      <div *ngIf="formularioTipoCita.controls['duracion_cita'].hasError('required')" class="alert alert-danger">
         La duración de la cita es requerida.
       </div>
-      <div *ngIf="formularioTipoCita.controls['duracion_cita'].errors?.['pattern']" class="alert alert-danger">
+      <div *ngIf="formularioTipoCita.controls['duracion_cita'].hasError('pattern')" class="alert alert-danger">
         Solo se permiten números enteros para representar minutos.
       </div>
-      <div *ngIf="formularioTipoCita.controls['duracion_cita'].errors?.['max']" class="alert alert-danger">
+      <div *ngIf="formularioTipoCita.controls['duracion_cita'].hasError('max')" class="alert alert-danger">
         La duración de la cita no puede exceder los 180 minutos (3 hrs).
       </div>
     </div>
-  
-    <!-- Mostrar la conversión de minutos a horas y minutos -->
-<!-- Mostrar la conversión de minutos a horas y minutos -->
-<div *ngIf="formularioTipoCita.controls['duracion_cita']?.valid && formularioTipoCita.get('duracion_cita')?.value">
-  {{ convertirMinutosAHoras(formularioTipoCita.get('duracion_cita')?.value) }}
-</div>
-
+    <div *ngIf="formularioTipoCita.controls['duracion_cita']?.valid && formularioTipoCita.get('duracion_cita')?.value">
+      {{ convertirMinutosAHoras(formularioTipoCita.get('duracion_cita')?.value) }}
+    </div>
   </div>
   
-  
-  
-
-  
-  <button type="submit" class="btn btn-primary" [disabled]="!formularioTipoCita.valid">Crear Tipo Cita</button>
-
+  <button type="submit" class="btn btn-primary" [disabled]="!formularioTipoCita.valid">
+    {{ isEditMode ? 'Guardar Cambios' : 'Crear Tipo Cita' }}
+  </button>
 </form>
