--- a/src/app/admin/pages/gestionarTiposCitas/gestionar-tipos-citas/gestionar-tipos-citas.component.html
+++ b/src/app/admin/pages/gestionarTiposCitas/gestionar-tipos-citas/gestionar-tipos-citas.component.html
@@ -36,17 +36,14 @@
                     <table class="table table-bordered">
                       <thead>
                         <tr>
-         
-                          <th>ID </th>
-                          <th>Especialidad Medica</th>
-                          <th>Precio</th>
-                          
-                          <th>Duracion cita</th>
-                          <th>acciones</th>
-
-
+                          <th style="width: 10%;">ID</th>
+                          <th style="width: 30%;">Especialidad Médica</th>
+                          <th style="width: 20%;">Precio</th>
+                          <th style="width: 20%;">Duración cita</th>
+                          <th style="width: 20%;">Acciones</th>
                         </tr>
                       </thead>
+                      
                       <tbody>
                         <tr *ngFor="let tipocita of tiposCitas">
                           <td>{{tipocita.idTipo}}</td>
