--- a/src/app/admin/pages/gestionarTiposCitas/gestionar-tipos-citas/gestionar-tipos-citas.component.scss
+++ b/src/app/admin/pages/gestionarTiposCitas/gestionar-tipos-citas/gestionar-tipos-citas.component.scss
@@ -6,3 +6,16 @@
     display: inline-block;
     margin-right: 10px;  /* Esto añade un pequeño espacio entre los íconos */
 }
+
+.table {
+    width: 100%;
+    table-layout: fixed; /* Forza anchos fijos en las columnas */
+  }
+  
+  .table th,
+  .table td {
+    white-space: nowrap;       /* Evita que el texto se divida en varias líneas */
+    overflow: hidden;          /* Oculta el contenido que se desborda */
+    text-overflow: ellipsis;   /* Muestra "..." si el contenido es muy largo */
+  }
+  
