--- a/src/app/medicos/historial/historial.component.html
+++ b/src/app/medicos/historial/historial.component.html
@@ -1,65 +1,58 @@
-<form [formGroup]="historialMedicoForm" (ngSubmit)="guardarHistorial()">
-<!--
-  <div style="background-color: #4a89f6; color: #333; padding: 10px; border-radius: 5px; margin: 20px 0; border: 1px solid #ffa500;">
-    <strong>Advertencia:</strong> Por favor, recuerde que solo podrá redactar historiales médicos para pacientes cuyas citas estén en estado 'pagado' o 'en curso' con usted. Si la cita está en estado 'terminado', el paciente no aparecerá. Además, tenga en cuenta que cada vez que redacte un historial, el estado de la cita del paciente cambiará a 'terminado'..
-  </div> -->
-  <div class="text-center mb-4">
-    <h2>Redactar Historial Médico</h2>
-</div>
-<div class="mb-3">
-  <label for="paciente" class="form-label">Paciente:</label>
-  <select class="form-control" id="paciente" formControlName="rut_paciente">
-    <option value="" disabled selected>Seleccionar paciente</option>
-  
-    <option *ngFor="let paciente of pacientes" [value]="paciente.rut">{{ paciente.nombre }} {{ paciente.apellidos }}</option>
-  </select>
-  <div *ngIf="formularioIntentadoEnviar && historialMedicoForm.get('rut_paciente')!.hasError('required')" class="text-danger">
-    Se debe seleccionar un paciente.
-  </div>
-  
-</div>
+<div class="container mt-5">
+  <h2 class="text-center mb-4">
+    {{ isEditMode ? 'Editar Historial Médico' : 'Redactar Historial Médico' }}
+  </h2>
+  <form [formGroup]="historialMedicoForm" (ngSubmit)="onSubmit()">
+    <div class="mb-3">
+      <label for="paciente" class="form-label">Paciente:</label>
+      <select class="form-control" id="paciente" formControlName="rut_paciente">
+        <option value="" disabled>Seleccionar paciente</option>
+        <option *ngFor="let paciente of pacientes" [value]="paciente.rut">
+          {{ paciente.nombre }} {{ paciente.apellidos }}
+        </option>
+      </select>
+      <div *ngIf="formularioIntentadoEnviar && historialMedicoForm.get('rut_paciente')?.hasError('required')" class="text-danger">
+        Se debe seleccionar un paciente.
+      </div>
+    </div>
 
-      <div class="mb-3">
-        <label for="medico" class="form-label">Médico:</label>
-        <select class="form-control" id="medico" formControlName="rut_medico">
-          <option [value]="AuthService.medico.rut">{{ AuthService.medico.nombre }} {{ AuthService.medico.apellidos }}</option>
-        </select>
-        
-        
+    <div class="mb-3">
+      <label for="medico" class="form-label">Médico:</label>
+      <select class="form-control" id="medico" formControlName="rut_medico">
+        <option [value]="AuthService.medico.rut">
+          {{ AuthService.medico.nombre }} {{ AuthService.medico.apellidos }}
+        </option>
+      </select>
+    </div>
+
+    <div class="mb-3">
+      <label for="diagnostico" class="form-label">Diagnóstico:</label>
+      <input type="text" class="form-control" id="diagnostico" formControlName="diagnostico">
+      <div *ngIf="formularioIntentadoEnviar && historialMedicoForm.get('diagnostico')?.hasError('required')" class="text-danger">
+        El diagnóstico es requerido.
       </div>
-      <div class="mb-3">
-        <label for="diagnostico" class="form-label">Diagnóstico:</label>
-        <input type="text" class="form-control" id="diagnostico" formControlName="diagnostico">
-        <div *ngIf="formularioIntentadoEnviar && historialMedicoForm.get('diagnostico')!.hasError('required')" class="text-danger">
-          El diagnóstico es requerido.
-        </div>
-      </div>
-      
-  
+    </div>
+
     <div class="mb-3">
       <label for="medicamento" class="form-label">Medicamento:</label>
       <input type="text" class="form-control" id="medicamento" formControlName="medicamento">
     </div>
-  
+
     <div class="mb-3">
       <label for="notas" class="form-label">Notas:</label>
       <textarea class="form-control" id="notas" formControlName="notas"></textarea>
     </div>
-  
+
     <div class="mb-3">
       <label for="fecha_consulta" class="form-label">Fecha de Consulta:</label>
       <input type="date" class="form-control" id="fecha_consulta" formControlName="fecha_consulta">
-      <div *ngIf="formularioIntentadoEnviar && historialMedicoForm.get('fecha_consulta')!.hasError('required')" class="text-danger">
+      <div *ngIf="formularioIntentadoEnviar && historialMedicoForm.get('fecha_consulta')?.hasError('required')" class="text-danger">
         La fecha de consulta es requerida.
       </div>
     </div>
-    
-    
-  
-  
-    <button type="submit" class="btn btn-primary">Guardar</button>
 
-  
+    <button type="submit" class="btn btn-primary">
+      {{ isEditMode ? 'Guardar Cambios' : 'Guardar Historial' }}
+    </button>
   </form>
-  
-  
+</div>
