--- a/src/app/medicos/gestionar-historiales/gestionar-historiales.component.html
+++ b/src/app/medicos/gestionar-historiales/gestionar-historiales.component.html
@@ -81,12 +81,14 @@
                     </table>
                   </div>
                 <!--ESTA CONDICION SE HACE PARA QUE CUANDO SE TECLEA EN LA BARRA DE BUSQUEDA Y SE CARGAN LOS RESULTADOS DE BUSQUEDA DESAPARESCAN LOS BOTONES SIGUIENTES Y ANTERIOR EN LA PANTALLA-->
-                <app-paginator 
-                [totalItems]="totalHistoriales" 
-                [(offset)]="desde" 
-                [pageSize]="5"
-                (offsetChange)="cambiarPagina($event)">
-              </app-paginator>
+                <div *ngIf="txtTermino.value.length === 0"> <!--SI EL TERMINO ES IGUAL A 0 LOS BOTONES SIGUIENTE Y ANTERIOR SE VAN A MOSTRAR CASO CONTRARIO VAN A DESAPARECER-->
+                  <app-paginator 
+                  [totalItems]="totalHistoriales" 
+                  [(offset)]="desde" 
+                  [pageSize]="5"
+                  (offsetChange)="cambiarPagina($event)">
+                </app-paginator>
+              </div>
 
             
             </div>
